--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="side-bar">
+  <div class="side-bar">
     <div class="toggle-btn" id="btn">
       <span></span>
       <span></span>
